--- a/index.html
+++ b/index.html
@@ -9,31 +9,29 @@
   <meta name="description" content="Matthew &amp; Keilah's Wedding">
   <meta name="author" content="Matthew Medal">
 
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/bootstrap-grid.css" rel="stylesheet">
-  <link href="css/animate.css" rel="stylesheet">
-  <link href="css/wedding.css" rel="stylesheet">
-  <link href="css/icon.css" rel="stylesheet">
+  <link href="app.css" rel="stylesheet">
 
   <link href="http://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lora:400" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
 
-  <link rel="shortcut icon" href="img/fav/favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
 
-<svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg">
+<svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
+     xmlns="http://www.w3.org/2000/svg">
   <defs>
     <symbol id="icon-angle-down" viewBox="0 0 18 28">
       <title>angle-down</title>
-      <path d="M16.797 11.5c0 0.125-0.063 0.266-0.156 0.359l-7.281 7.281c-0.094 0.094-0.234 0.156-0.359 0.156s-0.266-0.063-0.359-0.156l-7.281-7.281c-0.094-0.094-0.156-0.234-0.156-0.359s0.063-0.266 0.156-0.359l0.781-0.781c0.094-0.094 0.219-0.156 0.359-0.156 0.125 0 0.266 0.063 0.359 0.156l6.141 6.141 6.141-6.141c0.094-0.094 0.234-0.156 0.359-0.156s0.266 0.063 0.359 0.156l0.781 0.781c0.094 0.094 0.156 0.234 0.156 0.359z"></path>
+      <path
+        d="M16.797 11.5c0 0.125-0.063 0.266-0.156 0.359l-7.281 7.281c-0.094 0.094-0.234 0.156-0.359 0.156s-0.266-0.063-0.359-0.156l-7.281-7.281c-0.094-0.094-0.156-0.234-0.156-0.359s0.063-0.266 0.156-0.359l0.781-0.781c0.094-0.094 0.219-0.156 0.359-0.156 0.125 0 0.266 0.063 0.359 0.156l6.141 6.141 6.141-6.141c0.094-0.094 0.234-0.156 0.359-0.156s0.266 0.063 0.359 0.156l0.781 0.781c0.094 0.094 0.156 0.234 0.156 0.359z"></path>
     </symbol>
     <symbol id="icon-plane" viewBox="0 0 22 28">
       <title>plane</title>
-      <path d="M21.5 2.5c1 1 0 3.5-1.5 5l-2.516 2.516 2.5 10.875c0.047 0.187-0.031 0.391-0.187 0.516l-2 1.5c-0.078 0.063-0.187 0.094-0.297 0.094-0.031 0-0.063 0-0.109-0.016-0.141-0.031-0.266-0.109-0.328-0.25l-4.359-7.938-4.047 4.047 0.828 3.031c0.047 0.172 0 0.344-0.125 0.484l-1.5 1.5c-0.094 0.094-0.234 0.141-0.359 0.141h-0.031c-0.156-0.016-0.281-0.078-0.375-0.203l-2.953-3.938-3.938-2.953c-0.125-0.078-0.187-0.219-0.203-0.359s0.047-0.281 0.141-0.391l1.5-1.516c0.094-0.094 0.234-0.141 0.359-0.141 0.047 0 0.094 0 0.125 0.016l3.031 0.828 4.047-4.047-7.938-4.359c-0.141-0.078-0.234-0.219-0.266-0.375-0.016-0.141 0.031-0.313 0.141-0.422l2-2c0.125-0.109 0.313-0.172 0.469-0.125l10.391 2.484 2.5-2.5c1.5-1.5 4-2.5 5-1.5z"></path>
+      <path
+        d="M21.5 2.5c1 1 0 3.5-1.5 5l-2.516 2.516 2.5 10.875c0.047 0.187-0.031 0.391-0.187 0.516l-2 1.5c-0.078 0.063-0.187 0.094-0.297 0.094-0.031 0-0.063 0-0.109-0.016-0.141-0.031-0.266-0.109-0.328-0.25l-4.359-7.938-4.047 4.047 0.828 3.031c0.047 0.172 0 0.344-0.125 0.484l-1.5 1.5c-0.094 0.094-0.234 0.141-0.359 0.141h-0.031c-0.156-0.016-0.281-0.078-0.375-0.203l-2.953-3.938-3.938-2.953c-0.125-0.078-0.187-0.219-0.203-0.359s0.047-0.281 0.141-0.391l1.5-1.516c0.094-0.094 0.234-0.141 0.359-0.141 0.047 0 0.094 0 0.125 0.016l3.031 0.828 4.047-4.047-7.938-4.359c-0.141-0.078-0.234-0.219-0.266-0.375-0.016-0.141 0.031-0.313 0.141-0.422l2-2c0.125-0.109 0.313-0.172 0.469-0.125l10.391 2.484 2.5-2.5c1.5-1.5 4-2.5 5-1.5z"></path>
     </symbol>
   </defs>
 </svg>
@@ -49,8 +47,11 @@
       <p>7/8/2017 • Santa Clara, CA</p>
     </div>
     <div class="see-more">
-      <a href="#about" class="more scroll-down"><svg class="icon icon-angle-down"><use xlink:href="#icon-angle-down"></use></svg></a>
-      <!--<a href="#about" class="more scroll-down"><i class="fa fa-angle-down"></i></a>-->
+      <a href="#about" class="more scroll-down">
+        <svg class="icon icon-angle-down">
+          <use xlink:href="#icon-angle-down"></use>
+        </svg>
+      </a>
     </div>
   </section>
 
@@ -130,10 +131,15 @@
   ================================================== -->
   <section id="hotels">
     <div class="hotel">
-      <h3><svg class="icon icon-plane"><use xlink:href="#icon-plane"></use></svg>If you're coming from out of town, we recommend these hotel accomodations.</h3>
+      <h3>
+        <svg class="icon icon-plane">
+          <use xlink:href="#icon-plane"></use>
+        </svg>
+        If you're coming from out of town, we recommend these hotel accomodations.
+      </h3>
       <div class="info">
         <h4>Generic Hotel</h4>
-        <p>444 Banana Hotel Dr<br>Yolo Town, CA 95123</p>
+        <p>444 Banana Hotel Dr<br>Yolo Town, CA 11111</p>
         <a href="tel:512-858-2400">(444) 444-4444</a>
       </div>
     </div>
@@ -151,14 +157,14 @@
       <div class="continer">
         <div class="row reg-logos">
           <div class="col-md-4">
-            <a href="http://www.crateandbarrel.com" target="_blank"><img src="img/crateandbarrel-logo.svg"
+            <a href="http://www.crateandbarrel.com" target="_blank"><img src="crateandbarrel-logo.svg"
                                                                          class="registry candb"></a>
           </div>
           <div class="col-md-4">
-            <a href="http://amzn.to/2qbzcPt" target="_blank"><img src="img/amazon-logo.svg" class="registry amzn"></a>
+            <a href="http://amzn.to/2qbzcPt" target="_blank"><img src="amazon-logo.svg" class="registry amzn"></a>
           </div>
           <div class="col-md-4">
-            <a href="http://macys.com" target="_blank"><img src="img/macys-logo.svg" class="registry macys"></a>
+            <a href="http://macys.com" target="_blank"><img src="macys-logo.svg" class="registry macys"></a>
           </div>
         </div>
       </div>
