--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="event">
             <h2 class="section-header">Reception<span class="who">By invite only</span></h2>
             <p class="when">July 8 &nbsp;&bull;&nbsp; 3:00 pm</p>
-            <p class="where">Cool House</p>
+            <p class="where">Uncle Don & Aunt Mandy's House</p>
             <a href="" target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
@@ -135,7 +135,7 @@
         <svg class="icon icon-plane">
           <use xlink:href="#icon-plane"></use>
         </svg>
-        If you're coming from out of town, we recommend these hotel accomodations.
+        If you're coming from out of town, we recommend these hotel accomodations:
       </h3>
       <div class="info">
         <h4>Generic Hotel</h4>
