Registries updated & minor fixes

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         If you're coming from out of town, we recommend these hotel accomodations:
       </h3>
       <div class="info">
-        <h4>Generic Hotel</h4>
-        <p>444 Banana Hotel Dr<br>Yolo Town, CA 11111</p>
-        <a href="tel:512-858-2400">(444) 444-4444</a>
+        <h4>Hyatt House Santa Clara</h4>
+        <p>3915 Rivermark Plaza<br>Santa Clara, CA 95054</p>
+        <a href="tel:408-486-0800">(408) 486-0800</a>
       </div>
     </div>
   </section>
@@ -152,19 +152,17 @@
     <div>
       <h2 class="section-header">Registry</h2>
       <p>We are so grateful to all of our loved ones who have shown us continuous support. The best support you can give
-        us now is by delighting us with your presence at our wedding! However, for those of you who wish to help us in a
-        more tangible way, our online registries can be viewed by clicking the respective links below.</p>
+        us now is by delighting us with your presence at our wedding! However, for those of you who wish to help us
+        stock our home, our online registries can be viewed by clicking the respective links below.</p>
       <div class="continer">
         <div class="row reg-logos">
-          <div class="col-md-4">
-            <a href="http://www.crateandbarrel.com" target="_blank"><img src="crateandbarrel-logo.svg"
-                                                                         class="registry candb"></a>
+          <div class="col-md-5 offset-md-1">
+            <a href="https://www.crateandbarrel.com/gift-registry/matthew-medal-and-keilah-reyes/r5694489"
+               target="_blank"><img src="crateandbarrel-logo.svg"
+                                    class="registry candb"></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-5">
             <a href="http://amzn.to/2qbzcPt" target="_blank"><img src="amazon-logo.svg" class="registry amzn"></a>
-          </div>
-          <div class="col-md-4">
-            <a href="http://macys.com" target="_blank"><img src="macys-logo.svg" class="registry macys"></a>
           </div>
         </div>
       </div>
