Tweak event allowances

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <div class="col-md-4">
           <div class="event">
-            <h2 class="section-header">Wedding<span class="who">By invite only</span></h2>
+            <h2 class="section-header">Wedding<span class="who">All are welcome!</span></h2>
             <p class="when">July 8 &nbsp;&bull;&nbsp; 12:00 pm</p>
             <p class="where">Santa Clara Mission</p>
             <a
