Update about section

--- a/index.html
+++ b/index.html
@@ -59,29 +59,21 @@
   <!-- ABOUT
   ================================================== -->
   <section id="about">
-    <h2 class="section-header first">Keilah</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices pellentesque massa, sed luctus mi
-      luctus sit amet. Etiam vitae est vel nulla ullamcorper lacinia. Sed nec sollicitudin diam. Nam laoreet, ipsum et
-      venenatis mattis, lacus tellus interdum augue, vitae consequat ex magna sed nunc. Nunc interdum pharetra velit nec
-      suscipit. In placerat arcu in urna vulputate consectetur. Mauris eget magna feugiat justo luctus tincidunt a id
-      dui. Fusce et lorem ut eros venenatis aliquet eleifend in dolor. Maecenas convallis enim sit amet enim tristique,
-      quis imperdiet magna imperdiet. Suspendisse venenatis mauris mauris.</p>
+    <h2 class="section-header first">Matthew & Keilah</h2>
+    <p>For four years, Matthew and Keilah heard all about each other through their mutual friends, Jeff and Jamie
+      (henceforth known as JJ). Matthew had been good friends with Jeff since high school and Keilah became friends with
+      JJ in college. Over this four year period, there were many organized events by JJ to get everyone together.
+      Improbably, one of either Matthew or Keilah could never make it. Keilah even met Matthew's friends before she met
+      Matthew himself. As Matthew and Keilah continued to narrowly miss making each other's acquaintance, JJ began to
+      joke about the prospect of matchmaking the two of them. When Matthew and Keilah were finally introduced, JJ's
+      joke became a wonderful reality.</p>
 
-    <h2 class="section-header first">Matthew</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices pellentesque massa, sed luctus mi
-      luctus sit amet. Etiam vitae est vel nulla ullamcorper lacinia. Sed nec sollicitudin diam. Nam laoreet, ipsum et
-      venenatis mattis, lacus tellus interdum augue, vitae consequat ex magna sed nunc. Nunc interdum pharetra velit nec
-      suscipit. In placerat arcu in urna vulputate consectetur. Mauris eget magna feugiat justo luctus tincidunt a id
-      dui. Fusce et lorem ut eros venenatis aliquet eleifend in dolor. Maecenas convallis enim sit amet enim tristique,
-      quis imperdiet magna imperdiet. Suspendisse venenatis mauris mauris.</p>
-
-    <h2 class="section-header">Together</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ultrices pellentesque massa, sed luctus mi
-      luctus sit amet. Etiam vitae est vel nulla ullamcorper lacinia. Sed nec sollicitudin diam. Nam laoreet, ipsum et
-      venenatis mattis, lacus tellus interdum augue, vitae consequat ex magna sed nunc. Nunc interdum pharetra velit nec
-      suscipit. In placerat arcu in urna vulputate consectetur. Mauris eget magna feugiat justo luctus tincidunt a id
-      dui. Fusce et lorem ut eros venenatis aliquet eleifend in dolor. Maecenas convallis enim sit amet enim tristique,
-      quis imperdiet magna imperdiet. Suspendisse venenatis mauris mauris.</p>
+    <h2 class="section-header">Moving forwards Together</h2>
+    <p>Immediately following their marriage, Matthew and Keilah will be spending their honeymoon traveling (eating their
+      way) through Paris, Rome, and London. Upon their return home, they are excited to continue building their life
+      together in San Francisco. Matthew and Keilah have dreams of owning a home, adopting a corgi named Pippin,
+      and some day, raising a beautiful family of their own. In the meantime, they'll probably spend time traveling,
+      fine-dining, rock climbing, drinking excellent wine/beer, and spending time with their lovely families.</p>
 
   </section>
 
@@ -153,7 +145,7 @@
       <h2 class="section-header">Registry</h2>
       <p>We are so grateful to all of our loved ones who have shown us continuous support. The best support you can give
         us now is by delighting us with your presence at our wedding! However, for those of you who wish to help us
-        stock our home, our online registries can be viewed by clicking the respective links below.</p>
+        begin stocking our home, our online registries can be viewed by clicking the respective links below.</p>
       <div class="continer">
         <div class="row reg-logos">
           <div class="col-md-5 offset-md-1">
