Add addresses to events

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="when">July 7 &nbsp;&bull;&nbsp; 5:00 pm</p>
             <p class="where">Adobe Lodge at SCU</p>
             <a
-              href="https://www.google.com/maps/place/Mission+Santa+Clara+de+As%C3%ADs/@37.3492346,-121.9437547,17z/data=!3m1!4b1!4m5!3m4!1s0x808fcbc9416564ab:0xc94ed6f080bbaa15!8m2!3d37.3492346!4d-121.941566"
+              href="https://www.google.com/maps/place/Adobe+Lodge/@37.3485178,-121.9418893,15z/data=!4m5!3m4!1s0x0:0x4f25c25b6880c1d5!8m2!3d37.3485178!4d-121.9418893"
               target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <h2 class="section-header">Reception<span class="who">By invite only</span></h2>
             <p class="when">July 8 &nbsp;&bull;&nbsp; 3:00 pm</p>
             <p class="where">Uncle Don & Aunt Mandy's House</p>
-            <a href="" target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
+            <a href="https://www.google.com/maps/place/34+Lloyden+Dr,+Atherton,+CA+94027/@37.4649016,-122.2039707,17z/data=!3m1!4b1!4m5!3m4!1s0x808fa3661454db61:0x15a13752e3c65b40!8m2!3d37.4649016!4d-122.2017767" target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
