About section edits

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <p>Immediately following their marriage, Matthew and Keilah will be spending their honeymoon traveling (eating their
       way) through Paris, Rome, and London. Upon their return home, they are excited to continue building their life
       together in San Francisco. Matthew and Keilah have dreams of owning a home, adopting a corgi named Pippin,
-      and some day, raising a beautiful family of their own. In the meantime, they'll probably spend time traveling,
-      fine-dining, rock climbing, drinking excellent wine/beer, and spending time with their lovely families.</p>
+      and some day, raising a beautiful family of their own. In the meantime, they'll probably spend their time
+      traveling, fine-dining, rock climbing, drinking excellent wine/beer, and being with their lovely families.</p>
 
   </section>
 
