--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <link href="app.css" rel="stylesheet">
 
+  <script type="text/javascript" src="app.js"></script>
+
   <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
@@ -62,11 +64,11 @@
     <h2 class="section-header first">Matthew & Keilah</h2>
     <p>For four years, Matthew and Keilah heard all about each other through their mutual friends, Jeff and Jamie
       (henceforth known as JJ). Matthew had been good friends with Jeff since high school and Keilah became friends with
-      JJ in college. Over this four year period, there were many organized events by JJ to get everyone together.
-      Improbably, one of either Matthew or Keilah could never make it. Keilah even met Matthew's friends before she met
-      Matthew himself. As Matthew and Keilah continued to narrowly miss making each other's acquaintance, JJ began to
-      joke about the prospect of matchmaking the two of them. When Matthew and Keilah were finally introduced, JJ's
-      joke became a wonderful reality.</p>
+      JJ in college. Over this four year period, there were many events organized by JJ in an effort to get everyone
+      together. Improbably, one of either Matthew or Keilah was never able to attend. Keilah even met Matthew's friends
+      before she met Matthew himself! As Matthew and Keilah continued to narrowly miss making each other's acquaintance,
+      JJ began to joke about the prospect of matchmaking the two of them. When Matthew and Keilah were finally
+      introduced, JJ's joke became a wonderful reality.</p>
 
     <h2 class="section-header">Moving forwards Together</h2>
     <p>Immediately following their marriage, Matthew and Keilah will be spending their honeymoon traveling (eating their
@@ -74,7 +76,6 @@
       together in San Francisco. Matthew and Keilah have dreams of owning a home, adopting a corgi named Pippin,
       and some day, raising a beautiful family of their own. In the meantime, they'll probably spend their time
       traveling, fine-dining, rock climbing, drinking excellent wine/beer, and being with their lovely families.</p>
-
   </section>
 
 
@@ -87,7 +88,7 @@
         <div class="col-md-4">
           <div class="event">
             <h2 class="section-header">Rehearsal Dinner<span class="who">By invite only</span></h2>
-            <p class="when">July 7 &nbsp;&bull;&nbsp; 5:00 pm</p>
+            <p class="when">July 7 &nbsp;&bull;&nbsp; 6:00 pm</p>
             <p class="where">Adobe Lodge at SCU</p>
             <a
               href="https://www.google.com/maps/place/Adobe+Lodge/@37.3485178,-121.9418893,15z/data=!4m5!3m4!1s0x0:0x4f25c25b6880c1d5!8m2!3d37.3485178!4d-121.9418893"
@@ -109,7 +110,7 @@
         <div class="col-md-4">
           <div class="event">
             <h2 class="section-header">Reception<span class="who">By invite only</span></h2>
-            <p class="when">July 8 &nbsp;&bull;&nbsp; 3:00 pm</p>
+            <p class="when">July 8 &nbsp;&bull;&nbsp; Immediately following</p>
             <p class="where">Uncle Don & Aunt Mandy's House</p>
             <a href="https://www.google.com/maps/place/34+Lloyden+Dr,+Atherton,+CA+94027/@37.4649016,-122.2039707,17z/data=!3m1!4b1!4m5!3m4!1s0x808fa3661454db61:0x15a13752e3c65b40!8m2!3d37.4649016!4d-122.2017767" target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
           </div>
