JS template and tooling

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="col-md-4">
           <div class="event">
             <h2 class="section-header">Reception<span class="who">By invite only</span></h2>
-            <p class="when">July 8 &nbsp;&bull;&nbsp; Immediately following</p>
+            <p class="when">July 8 &nbsp;&bull;&nbsp; 2:00 pm</p>
             <p class="where">Uncle Don & Aunt Mandy's House</p>
             <a href="https://www.google.com/maps/place/34+Lloyden+Dr,+Atherton,+CA+94027/@37.4649016,-122.2039707,17z/data=!3m1!4b1!4m5!3m4!1s0x808fa3661454db61:0x15a13752e3c65b40!8m2!3d37.4649016!4d-122.2017767" target="_blank" class="directions">Get Directions<i class="fa fa-long-arrow-right"></i></a>
           </div>
