Actually do the requests when RSVPing

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="myform add-pad">
         <form id="rsvp-form">
           <div id="rsvp-form-entries">
-            <label>Will you be attending the wedding &amp; reception?</label>
+            <label>Will you or your family be attending the wedding &amp; reception?</label>
             <p>
               <input type="radio" value="Yes" name="attending" class="radio">Yes
               <input type="radio" value="No" name="attending" class="radio">No
