Amazon link updated

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                     class="registry candb"></a>
           </div>
           <div class="col-md-5">
-            <a href="http://amzn.to/2qbzcPt" target="_blank"><img src="amazon-logo.svg" class="registry amzn"></a>
+            <a href="http://amzn.to/2r1Ejmi" target="_blank"><img src="amazon-logo.svg" class="registry amzn"></a>
           </div>
         </div>
       </div>
