Tweak logos for amzn

--- a/index.html
+++ b/index.html
@@ -149,11 +149,13 @@
         <div class="row reg-logos">
           <div class="col-md-5 offset-md-1">
             <a href="https://www.crateandbarrel.com/gift-registry/matthew-medal-and-keilah-reyes/r5694489"
-               target="_blank"><img src="crateandbarrel-logo.svg"
-                                    class="registry candb"></a>
+               target="_blank"><img src="cb-logo.svg"
+                                    class="registry reg-cb"></a>
           </div>
           <div class="col-md-5">
-            <a href="http://amzn.to/2r1Ejmi" target="_blank"><img src="amazon-logo.svg" class="registry amzn"></a>
+            <a href="https://www.amazon.com/wedding/organize-registry/ref=as_li_ss_tl?ie=UTF8&linkCode=ll2&tag=mmedal-20&linkId=a1c90307be10227332c9a5d51e35168e"
+               target="_blank"><img src="am-logo.svg"
+                                    class="registry reg-a"></a>
           </div>
         </div>
       </div>
