--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       JJ began to joke about the prospect of matchmaking the two of them. When Matthew and Keilah were finally
       introduced, JJ's joke became a wonderful reality.</p>
 
-    <h2 class="section-header">Moving forwards Together</h2>
+    <h2 class="section-header">Moving forward Together</h2>
     <p>Immediately following their marriage, Matthew and Keilah will be spending their honeymoon traveling (eating their
       way) through Paris, Rome, and London. Upon their return home, they are excited to continue building their life
       together in San Francisco. Matthew and Keilah have dreams of owning a home, adopting a corgi named Pippin,
